FIX process is not defined

--- a/node-lab1/.eslintrc.json
+++ b/node-lab1/.eslintrc.json
@@ -1,7 +1,8 @@
 {
     "env": {
         "browser": true,
-        "es2021": true
+        "es2021": true,
+        "node": true
     },
     "extends": [
         "eslint:recommended",
@@ -17,5 +18,9 @@
     "rules": {
         "semi": 1,
         "no-console": "off"
-    }
+    },
+    "globals": {
+        "process": "readonly" 
+      }
+   
 }
